# VLSI-CAD

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/equivalence/: results.txt
benchmarks/equivalence/cavlc/: 2.blif  4.blif  5.blif  6.blif
benchmarks/equivalence/int2float/: 3.blif  4.blif  5.blif  6.blif
benchmarks/equivalence/max/: 2.blif
benchmarks/equivalence/priority/: 2.blif  3.blif  4.blif  5.blif  6.blif
benchmarks/equivalence/router/: 2.blif  3.blif  4.blif  5.blif  6.blif
benchmarks/tautology/: v11_c36.cube  v13_c24.cube  v16_c19.cube  v19_c59.cube
doc/: hw1.md  hw2.md  hw3.md
exercise1-rc/: CMakeLists.txt  README.md
exercise1-rc/benchmarks/: c1.ans  c1.rct  c17.ans  c17.rct  tv80.ans
exercise1-rc/src/: rctree-exercise.cpp  rctree-simplified.cpp  rctree-simplified.hpp
exercise2-prop/: CMakeLists.txt  README.md
exercise2-prop/benchmarks/: example.ans  s27.ans  s344.ans
exercise2-prop/benchmarks/s27/: s27.delay  (+1 more)
exercise2-prop/src/: io.cpp  main.cpp  timer-exercise.cpp  timer.hpp
hw2_pnr/partition/: CMakeLists.txt  README.md  hypergraph.h  main.cpp  parser.h  partition.cpp  partition.h
hw2_pnr/partition/dataset/: hmetis.perl  run.sh
hw2_pnr/sequencepair/: CMakeLists.txt  README.md  plot_floorplan.py
src/: CMakeLists.txt  bdd.cpp  bdd.h  bdd_factory.cpp  bdd_factory.h  sop.cpp  sop.h  sop_factory.cpp  sop_factory.h  tautology_main.cpp  techmap_main.cpp  techmap_node.cpp  techmap_node.h
src/utils/: arg.hpp  base.hpp  stopwatch.hpp
unittest/: CMakeLists.txt  equivalence_test.py  techmap_test.py
(+58 files in other folders)
